<resources>
    <string name="log_tag">MEMORY_GAME</string>
    <string name="app_name">MemoryGame</string>
    <string name="act_main_welcome">Welcome to the MEMORY GAME!</string>
    <string name="act_main_user_name">Name</string>
    <string name="act_main_user_age">Age</string>
    <string name="act_main_button_start">START!</string>
    <string name="err_empty_user_name">Please enter your name</string>
    <string name="err_empty_user_age">Please enter your age</string>
    <string name="act_game_select_user_name">Hello %s!!!</string>
    <string name="act_game_select_user_age">Being %d years old doesn\'t mean you can\'t play!</string>
    <string name="act_game_select_hard_level">HARD - %dx%d</string>
    <string name="act_game_select_mid_level">MID - %d x %d</string>
    <string name="act_game_select_easy_level">EASY - %d x %d</string>
    <string name="act_game_select_select_level">Please select level:</string>
    <string name="act_game_activity_matches">Matches:</string>
    <string name="act_game_activity_well_done">WELL DONE!!!</string>
    <string name="act_game_activity_game_over">GAME OVER!!!</string>
    <string name="act_game_select_scores">Top 10 Scores:</string>
    <string name="act_game_select_scores_mode_table">Table</string>
    <string name="act_game_select_scores_mode_map">Map</string>
    <string name="google_maps_api_key">AIzaSyCDRxumJo-eNToT7zrrkbtD6i0cItCpfJc</string>
</resources>
