<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSelectActivity">

    <TextView
        android:id="@+id/act_game_select_text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/act_game_select_text_view_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_game_select_text_view_name" />

    <TextView
        android:id="@+id/act_game_select_text_view_select_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/act_game_select_select_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_game_select_text_view_age" />

    <Button
        android:id="@+id/act_game_select_button_easy_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_game_select_text_view_select_level" />

    <Button
        android:id="@+id/act_game_select_button_mid_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/act_game_select_button_easy_level"
        app:layout_constraintTop_toBottomOf="@+id/act_game_select_text_view_select_level" />

    <Button
        android:id="@+id/act_game_select_button_hard_level"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/act_game_select_button_mid_level"
        app:layout_constraintTop_toBottomOf="@+id/act_game_select_text_view_select_level" />

    <TextView
        android:id="@+id/act_game_select_text_view_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:text="@string/act_game_select_scores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_game_select_button_mid_level" />

    <FrameLayout
        android:id="@+id/act_game_select_fragment_scores_fragment"
        android:layout_width="match_parent"
        android:layout_height="279dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_game_select_text_view_scores">
    </FrameLayout>

    <Button
        android:id="@+id/act_game_select_button_scores_mode"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/act_game_select_scores_mode_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toEndOf="@+id/act_game_select_text_view_scores"
        app:layout_constraintTop_toBottomOf="@+id/act_game_select_button_mid_level" />

</android.support.constraint.ConstraintLayout>